# vesc_express

./: .clang-format  .gitignore  48-esp.rules  CMakeLists.txt  README.md  VEDDER_PR_DRAFTS.md  build.sh  flash_openocd  partition_ota.csv  partitions_esp32c6.csv  sdkconfig  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c6_fh4  sdkconfig.defaults.esp32c6_fh8  sdkconfig.defaults.esp32p4_nrw32n16  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3_fh4  sdkconfig.defaults.esp32s3_fh4r2  sdkconfig.defaults.esp32s3_n16r8  sdkconfig.defaults.hw_c6_4m  sdkconfig.defaults.hw_s3_fh4r2  sdkconfig.defaults.idf6_lowram  sdkconfig.defaults.idf6_lowram.esp32c3  sdkconfig.defaults.idf6_lowram.esp32c6  sdkconfig.defaults.idf6_lowram.esp32s3  sdkconfig.defaults.idf6_lowram.nowireless  sdkconfig.esp32  sdkconfig.esp32c3  sdkconfig.esp32s3
.codex_tmp_docx/: JFBMS32_esp32c3.docx
cmake/: git_rev_parse.cmake
doc/: 48-esp.rules  esp32-c3_flash_fix.md
docker/: Dockerfile  README.md  docker-compose.yml
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  bms.c  bms.h  comm_ble.c  comm_ble.h  comm_ble_nimble.c  comm_ble_stub.c  comm_can.c  comm_can.h  comm_uart.c  comm_uart.h  comm_usb.c  comm_usb.h  comm_wifi.c  comm_wifi.h  comm_wifi_stub.c  commands.c  commands.h  conf_custom.c  conf_custom.h  conf_general.h  crc.c  crc.h  crypto.c  crypto.h  datatypes.h  flash_helper.c  flash_helper.h  hwspi.c  hwspi.h  i2c_compat.c  i2c_compat.h  idf_component.yml  lbm_color_extensions.c  lbm_color_extensions.h  lbm_vesc_utils.c  lbm_vesc_utils.h  (+34 more)
main/ble/: README.md  ble_compat.h  custom_ble.c  custom_ble.h  custom_ble_nimble.c  custom_ble_stub.c  lispif_ble_extensions.c  lispif_ble_extensions.h
main/c_libs/: vesc_c_if.h
main/config/: conf_default.h  confparser.c  confparser.h  confsrc.c  confxml.c  confxml.h  settings.xml
main/display/: README.md  disp_axs15231.c  disp_axs15231.h  disp_gc9a01.c  disp_icna3306.c  disp_icna3306.h  disp_ili9341.c  disp_ili9341.h  disp_ili9488.c  disp_ili9488.h  disp_jd9853.c  disp_sh8501b.c  disp_sh8501b.h  disp_sh8601.c  disp_sh8601.h  disp_ssd1306.c  disp_ssd1306.h  disp_ssd1351.c  disp_ssd1351.h  disp_st7701.c  disp_st7701.h  disp_st7735.c  disp_st7735.h  disp_st7789.c  disp_st7789.h  disp_st7789a.c  disp_st7789a.h  lispif_disp_extensions.c  lispif_disp_extensions.h
main/drivers/: enc_as504x.c  enc_as504x.h  hwspi.c  hwspi.h  spi_bb.c  spi_bb.h
main/drivers/bme280/: bme280.c  bme280.h  bme280_if.c  bme280_if.h
main/drivers/imu/: ahrs.c  ahrs.h  imu.c  imu.h  lsm6ds3.c  lsm6ds3.h
main/hwconf/: hw.c  hw.h  hw_c6_4m.c  hw_c6_4m.h  hw_c6_8m.c  hw_c6_8m.h  hw_devkit_c3.c  hw_devkit_c3.h  hw_devkit_c3_ili9341.c  hw_devkit_c3_ili9341.h  hw_devkit_c6.c  hw_devkit_c6.h  hw_devkit_c6_fh4.c  hw_devkit_c6_fh4.h  hw_devkit_c6_fh8.c  hw_devkit_c6_fh8.h  hw_devkit_s3_fh4.c  hw_devkit_s3_fh4.h  hw_lifan.c  hw_lifan.h  hw_p4_nrw32n16.c  hw_p4_nrw32n16.h  hw_s3_fh4r2.h  hw_s3_n16r8.h
main/hwconf/avaspark/: hw_rgb.c  hw_rgb.h  hw_rgb_v3.c  hw_rgb_v3.h
main/hwconf/devboards/: hw_blink_example.lbm  hw_blink_example_rgb.lbm  hw_c3_supermini.c  hw_c3_supermini.h  hw_devkit_c3.c  hw_devkit_c3.h  hw_xiao_c3.c  hw_xiao_c3.h
main/hwconf/jetfleet/jf_link/: hw_jf_link.c  hw_jf_link.h  jf_link_conf_default.h  jf_link_confparser.c  jf_link_confparser.h  jf_link_confxml.c  jf_link_confxml.h  jf_link_main.lisp  jf_link_settings.xml
main/hwconf/jetfleet/jfbms32/: bq769x2_defs.h  hw_jfbms32.c  hw_jfbms32_core.h  hw_jfbms32_v1.h  hw_jfbms32_v2.c  hw_jfbms32_v2.h  jfbms32_conf_default.h  jfbms32_confparser.c  jfbms32_confparser.h  jfbms32_confxml.c  jfbms32_confxml.h  jfbms32_main.lisp  jfbms32_settings.xml
main/hwconf/jetfleet/jfbms_slave/: BMS_MASTER_SLAVE_PROTOCOL.md  bq769x2_defs.h  hw_jfbms_slave.c  hw_jfbms_slave.h  jfbms_slave_conf_default.h  jfbms_slave_confparser.c  jfbms_slave_confparser.h  jfbms_slave_confxml.c  jfbms_slave_confxml.h  jfbms_slave_main.lisp  jfbms_slave_settings.xml  jfbms_slave_sim.lisp
main/hwconf/lb/: hw_lb_if.c  hw_lb_if.h  hw_lb_log.c  hw_lb_log.h
main/hwconf/rescue/: hw_mini.c  hw_mini.h  hw_s3.c  hw_s3.h
main/hwconf/trampa/: hw_disp_v1.c  hw_disp_v1.h  hw_xp_t.c  hw_xp_t.h
main/hwconf/trampa/bms_rb/: bms_main.lisp  bms_test.lisp  hw_bms_rb.c  hw_bms_rb.h  rb_conf_default.h  rb_confparser.c  rb_confparser.h  rb_confxml.c  rb_confxml.h  rb_settings.xml
main/hwconf/vesc/: hw_stick.c  hw_stick.h  hw_str365.c  hw_str365.h
main/hwconf/vesc/dash16/: hw_dash16.c
main/hwconf/vesc/duet/: hw_duet.c  hw_duet.h
main/hwconf/vesc/express_plus/: hw_express_plus.c  hw_express_plus.h
main/hwconf/vesc/link/: hw_link.c  hw_link.h  hw_test.lisp
main/hwconf/vesc/nanolog/: hw_nanolog.c  hw_nanolog.h
main/hwconf/vesc/rmcore/: demo_scooter.lbm  hw_rmcore.c  hw_rmcore.h
main/hwconf/vesc/scope/: hw_scope.c  hw_scope.h
main/hwconf/vesc/vbms16/: hw_vbms16.c  hw_vbms16.h  vbms16_conf_default.h  vbms16_confparser.c  vbms16_confparser.h  vbms16_confxml.c  vbms16_confxml.h  vbms16_settings.xml
main/hwconf/vesc/vbms32/: bms_main.lisp  bms_main_nopsw.lisp  bq769x2_defs.h  hw_vbms32.c  hw_vbms32.h  vbms32_conf_default.h  vbms32_confparser.c  vbms32_confparser.h  vbms32_confxml.c  vbms32_confxml.h  vbms32_settings.xml
main/hwconf/vesc/vdisp_900/: hw_test.lbm  hw_vdisp_900.c  hw_vdisp_900.h
main/hwconf/vesc/vdisp_dual/: disp_test.lisp  hw_vdisp_dual.c  hw_vdisp_dual.h
main/hwconf/vesc/wcore/: hw_wcore.c  hw_wcore.h  test_hw.lbm
main/lispBM/include/: eval_cps.h  lbm_utils.h
main/lispBM/include/extensions/: vesc_c_if.h
main/lispBM/repl/: repl.c
main/lispBM/src/: eval_cps.c
main/lispBM/src/extensions/: vesc_c_if.c
main/lowzip/: lowzip.c  lowzip.h
main/rgbled/: lispif_rgbled_extensions.c  lispif_rgbled_extensions.h
main/touch/: README.md  lispif_touch_extensions.c  lispif_touch_extensions.h  touch_cst816s.c  touch_cst816s.h  touch_cst836u.c  touch_cst836u.h  touch_gt911.c  touch_gt911.h  touch_xpt2046.c  touch_xpt2046.h
main/wifi/: README.md  lispif_wifi_extensions.c  lispif_wifi_extensions.h
(+25 files in other folders)
